# Notely

./: .gitignore  Dockerfile  README.md  backEnd.py  compose.yaml  editor_ui.py  file_manager.py  pyproject.toml
notely/: __main__.py  auth.py  editor_ui.py  file_manager.py  notely.py
notes/: untitled(1).md  untitled.md
notes/845874e8-a0d1-7071-1375-20f12d1b80e6/: untitled(1).md
resources/: Title.md  untitled(1).md  untitled.md
templates/: index.html
tests/: conftest.py  test_file_manager.py
